# AL_laba_5_1st_semestre

./: CMakeLists.txt  README.md
include/: header.hpp
src/: functions.cpp
tests/: tests.cpp
